--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal" id="newton-modal">
+<button type="button" class="btn btn-primary modal" data-bs-toggle="modal" data-bs-target="#exampleModal" id="newton-modal">
     Launch newton modal
   </button>
   
